--- a/package.json
+++ b/package.json
@@ -15,25 +15,56 @@
   ],
   "scripts": {
     "build": "tsc && shx chmod +x dist/*.js",
-    "prepare": "npm run build",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "format": "prettier --write \"**/*.{ts,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,json,md}\"",
+    "type-check": "tsc --noEmit",
+    "check": "npm run type-check && npm run lint && npm run format:check",
+    "fix": "npm run lint:fix && npm run format",
+    "prepare": "husky"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "0.5.0",
+    "chokidar": "^4.0.3",
+    "cors": "^2.8.5",
     "diff": "^5.1.0",
-    "glob": "^10.3.10",
-    "minimatch": "^10.0.1",
-    "zod-to-json-schema": "^3.23.5",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "express-rate-limit": "^8.1.0",
+    "glob": "^10.3.10",
+    "js-yaml": "^4.1.0",
+    "lru-cache": "^11.2.2",
+    "minimatch": "^10.0.1",
+    "pino": "^10.0.0",
+    "pino-pretty": "^13.1.1",
+    "prom-client": "^15.1.3",
+    "zod-to-json-schema": "^3.23.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/diff": "^5.0.9",
+    "@types/express": "^4.17.21",
+    "@types/js-yaml": "^4.0.9",
     "@types/minimatch": "^5.1.2",
     "@types/node": "^22",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.3.0",
+    "prettier": "^3.4.2",
     "shx": "^0.3.4",
     "typescript": "^5.3.3"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   }
 }
